# inat-fetcher

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NOTES.md  README.md  df_305767127.csv  pyproject.toml  tox.ini
.github/workflows/: main.yml
data/inat_pictures/: upload_state.json
data/inat_pictures/jbc_formatted_csv/: jbc_EPSG:2056.csv  sub_jbc_EPSG:4326.csv  subset.csv
inat_fetcher/: fetcher.py  foo.py
inat_fetcher/src/: .env.example  create_directus_fields.py  db_updater.py  directus_link_maker.py  editor.py  emi_id_extracter.py  fetcher.py  fetcher_jbc.py  foo.py  launcher.py  launcher.sh  location_formatter.py  nb.py  pusher.py
scripts/: make_allowlist_from_curation.py  push_project.sh
tests/: test_curation_allowlist.py  test_foo.py  test_pusher.py
