[project]
name = "inat-fetcher"
version = "0.0.1"
description = "iNaturalist fetch and push utilities"
authors = [{ name = "Edouard Brulhart", email = "edouard.bruelhart@unifr.ch" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas>=2.2.1",
    "pandas-stubs>=2.2.1.240316",
    "pyinaturalist>=0.19.0,<0.20.0",
    "pyinaturalist-convert==0.5.0",
    "pyproj>=3.7.2",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "requests-ratelimiter<0.8",
    "tablib>=3.5.0",
    "types-python-dateutil>=2.9.0.20240316",
    "types-requests>=2.31.0.20240406",
]

[project.urls]
Repository = "https://github.com/digital-botanical-gardens-initiative/inat-fetcher"
Documentation = "https://digital-botanical-gardens-initiative.github.io/inat-fetcher/"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
    "pytest>=7.2.0",
    "tox>=4.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["inat_fetcher"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E", "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = [
    "E501",
    "E731",
]

[tool.ruff.format]
preview = true

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
